# Customer-Churn-Analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENHANCED_SMOKE_TESTING.md  INSTALLATION.md  KAGGLE_DOWNLOAD_GUIDE.md  MANIFEST.in  MIGRATION_SUMMARY.md  Makefile  PACKAGING.md  README.md  README_DEMO.md  RELEASE.md  ROADMAP.md  STREAMLIT_README.md  VERSION_COMPATIBILITY_FIXES.md  XGBOOST_SKLEARN_COMPATIBILITY_FIX.md  analytics.db  check_workflow.sh  constraints.txt  debug_age_groups.py  debug_isinstance.py  debug_model_manager.py  debug_outliers.py  debug_preprocessing.py  debug_test.py  debug_type_check.py  debug_zscore.py  deploy_and_test.sh  docker-compose.yml  download_data.py  isolated_test.py  minimal_test.py  pyproject.toml  (+28 more)
.github/workflows/: backend.yml  ci-cd.yml  ci.yml  frontend.yml  retrain.yml
app/: __init__.py  config.py  exceptions.py  logging.py  main.py  middleware.py  monitoring.py
app/models/: __init__.py  schemas.py
app/routes/: __init__.py  auth.py  health.py  metrics.py  model_info.py  predict.py
app/services/: __init__.py  analytics.py  model_manager.py  observability.py
data/: data_dictionary.md
data/interim/: churn_raw.parquet
data/processed/: churn_cleaned.parquet  churn_features_all.parquet  churn_features_selected.parquet  missing_value_analysis.json  outlier_analysis.json  processing_validation.json
deployment/: Dockerfile  analytics.db  analytics_db.py  app.py  app_legacy.py  docker-compose.yml
deployment/models/: churn_model.pkl
deployment/monitoring/: alert_rules.yml  prometheus.yml
frontend/: .env.example  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  sample_data.csv  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: CSVUploader.jsx  Layout.tsx  Loader.jsx  PredictionCard.jsx  PredictionTable.jsx  ProtectedRoute.jsx
frontend/src/context/: PredictionsContext.jsx
frontend/src/contexts/: AuthContext.jsx  AuthContextDefinition.js  PredictionsContextDefinition.js
frontend/src/hooks/: useAuth.js  usePredictions.js
frontend/src/pages/: AnalyticsDashboard.tsx  BatchPredictions.tsx  Home.tsx  Login.jsx  ModelInsights.tsx  SinglePrediction.tsx
frontend/src/services/: apiService.js
frontend/src/styles/: tailwind.css
frontend/src/theme/: index.ts
legacy_tests/: README.md  debug_test.py  isolated_test.py  minimal_test.py
models/: selected_features.json
notebooks/: eda.ipynb
reports/: api_prediction_test.json  feature_engineering_summary.json  feature_importance.json  model_evaluation_results.json  model_prediction_test.json  project_summary.md
scripts/: deploy_and_test.sh  release.sh
src/data/: analytics.db  clean_data.py  load_data.py
src/features/: create_features.py
src/models/: explain.py  segment.py  train_churn.py
src/tests/: conftest.py  test_503_verification.py  test_api.py  test_api_backup.py  test_api_clean.py  test_data_pipeline.py  test_integration.py  test_models.py
tests/: conftest.py  test_health.py  test_metrics.py  test_model_info.py  test_predict.py
