[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-churn-analysis"
version = "0.2.6"
authors = [
    {name = "Bank Churn Analysis Team", email = "team@bankchurn.com"},
]
description = "Comprehensive ML solution for predicting customer churn in banking"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
keywords = ["machine-learning", "churn-prediction", "banking", "customer-analytics"]
dependencies = [
    "pandas>=1.5.0,<2.2.0",
    "numpy>=1.19.0,<1.25.0",
    "scipy>=1.7.0,<1.12.0",
    "scikit-learn>=1.1.0,<1.4.0",
    "xgboost==2.0.3",
    "lightgbm==4.1.0",
    "imbalanced-learn==0.11.0",
    "shap==0.44.0",
    "lime==0.2.0.1",
    "matplotlib==3.7.5",
    "seaborn==0.13.0",
    "plotly==5.17.0",
    "pyarrow==14.0.2",
    "fastparquet==2023.10.1",
    "h5py==3.10.0",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==1.10.12",
    "requests==2.31.0",
    "kaggle==1.5.16",
    "opendatasets==0.1.22",
    "joblib==1.1.1",
    "pickle-mixin==1.0.2",
    "mlflow==2.8.1",
    "statsmodels==0.14.1",
    "umap-learn==0.5.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "jupyter==1.0.0",
    "ipykernel==6.27.1",
    "ipywidgets==8.1.1",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
]

[project.scripts]
churn-predict = "src.models.train_churn:main"
churn-segment = "src.models.segment:main"
churn-explain = "src.models.explain:main"

[project.urls]
"Homepage" = "https://github.com/kathanparagshah/Customer-Churn-Analysis"
"Bug Reports" = "https://github.com/kathanparagshah/Customer-Churn-Analysis/issues"
"Source" = "https://github.com/kathanparagshah/Customer-Churn-Analysis"
"Documentation" = "https://github.com/kathanparagshah/Customer-Churn-Analysis/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "src/tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "shap.*",
    "lime.*",
    "xgboost.*",
    "lightgbm.*",
    "mlflow.*",
]
ignore_missing_imports = true